--- a/WebviewShortcut/Webview.xaml
+++ b/WebviewShortcut/Webview.xaml
@@ -9,7 +9,8 @@
         mc:Ignorable="d"
         Title="Webview" Height="450" Width="800"
         Topmost="True"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        WindowState="Maximized">
     <Grid>
         <wpf:ChromiumWebBrowser
             x:Name="Browser" Visibility="Hidden"/>
